@@ -272,7 +272,7 @@
   (c-name "totem_action_volume_relative")
   (return-type "none")
   (parameters
-    '("int" "off_pct")
+    '("gfloat" "off_pct")
   )
 )
 
